--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,7 +13,7 @@
         <li><a class="lien" href="/story">OUR STORY</a> </li>
         <li><a class="lien" href="/gallery">OUR GALLERY</a> </li>
         
-        <li><a class="lien" href="/menu">MENU & ACTIVITIES</a></li>
+        <li><a class="lien" href="/menu">MENU </a></li>
         <li><a class="lien" href="/info">RSVP & INFOS </a></li>
       </ul>
     </div> 
