--- a/templates/info/index.html.twig
+++ b/templates/info/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Hello InfoController!{% endblock %}
 
 {% block body %}
-  <div class="navbarGallery " style="background-color:;">
+  <div class="navbarGallery">
 <nav class="navbar">
     <a href="/home" class="lien logo"> A & J's WEDDING </a>
 
@@ -13,11 +13,11 @@
         <li><a class="lien" href="/story">OUR STORY</a> </li>
         <li><a class="lien" href="/gallery">OUR GALLERY</a> </li>
         
-        <li><a class="lien" href="/menu">MENU & ACTIVITIES</a></li>
+        <li><a class="lien" href="/menu">MENU </a></li>
         <li><a class="lien" href="/info">RSVP & INFOS </a></li>
       </ul>
     </div> 
-
+</div>
     <i class="fa-solid fa-bars" alt="menu burger" id="menu-hamburger" style="color:white"></i>
 
 
