--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -13,12 +13,12 @@
         <li><a class="lien" href="/story">OUR STORY</a> </li>
         <li><a class="lien" href="/gallery">OUR GALLERY</a> </li>
         
-        <li><a class="lien" href="/menu">MENU & ACTIVITIES</a></li>
+        <li><a class="lien" href="/menu">MENU </a></li>
         <li><a class="lien" href="/info">RSVP & INFOS </a></li>
       </ul>
     </div> 
 
-    <i class="fa-solid fa-bars" alt="menu burger" id="menu-hamburger" style="color:white"></i>
+    <i class="fa-solid fa-bars" alt="menu burger" id="menu-hamburger"></i>
 
 
     </nav>
@@ -26,7 +26,7 @@
  
 <header class="headerStory"> 
 
-  <h2 class="h2Story d-flex justify-content-center"> Our menu & activities -  made with love </h2>
+  <h2 class="h2Story d-flex justify-content-center"> Our menu -  made with love </h2>
 
 </header>
 
@@ -39,7 +39,7 @@
     <div class="App">
 
      <div class="card1" style="width: 18rem;">
-     <img src="https://img.freepik.com/free-psd/minimalist-wedding-menu-design_23-2148538241.jpg?w=1380&t=st=1676136466~exp=1676137066~hmac=4722914b696ea4278b8fa9f64f6d42cab9afcda3d8ab25d28444a3ec24d1278c" class="card-img-top" alt="...">
+     <img src="" class="card-img-top" alt="...">
      <div class="card-body">
      <h5 class="card-title">Appetizers</h5>
      <p class="card-text">Tomato and basil bruschetta</p>
@@ -54,7 +54,7 @@
 
 
      <div class="card1" style="width: 18rem;">
-     <img src="https://img.freepik.com/free-psd/minimalist-wedding-menu-design_23-2148538241.jpg?w=1380&t=st=1676136466~exp=1676137066~hmac=4722914b696ea4278b8fa9f64f6d42cab9afcda3d8ab25d28444a3ec24d1278c" class="card-img-top" alt="...">
+     <img src="" class="card-img-top" alt="...">
      <div class="card-body">
      <h5 class="card-title">Appetizers</h5>
      <p class="card-text">Mini vegetable quiches</p>
@@ -68,7 +68,7 @@
 
 
      <div class="card1" style="width: 18rem;">
-     <img src="https://img.freepik.com/free-psd/minimalist-wedding-menu-design_23-2148538241.jpg?w=1380&t=st=1676136466~exp=1676137066~hmac=4722914b696ea4278b8fa9f64f6d42cab9afcda3d8ab25d28444a3ec24d1278c" class="card-img-top" alt="...">
+     <img src="" class="card-img-top" alt="...">
      <div class="card-body">
      <h5 class="card-title">Appetizers</h5>
      <p class="card-text">Vietnamese spring rolls</p>
@@ -88,7 +88,7 @@
 
 
      <div class="card1" style="width: 18rem;">
-     <img src="..." class="card-img-top" alt="...">
+     <img src="" class="card-img-top" alt="...">
      <div class="card-body">
      <h5 class="card-title">Main Courses</h5>
      <p class="card-text">Grilled salmon with herb butter</p>
@@ -102,7 +102,7 @@
 
 
       <div class="card1" style="width: 18rem;">
-     <img src="..." class="card-img-top" alt="...">
+     <img src="" class="card-img-top" alt="...">
      <div class="card-body">
      <h5 class="card-title">Main Courses</h5>
      <p class="card-text">Beef tenderloin with red wine </p>
