--- a/templates/story/index.html.twig
+++ b/templates/story/index.html.twig
@@ -14,7 +14,7 @@
         <li><a class="lien" href="/story">OUR STORY</a> </li>
         <li><a class="lien" href="/gallery">OUR GALLERY</a> </li>
         
-        <li><a class="lien" href="/menu">MENU & ACTIVITIES</a></li>
+        <li><a class="lien" href="/menu">MENU </a></li>
         <li><a class="lien" href="/info">RSVP & INFOS </a></li>
       </ul>
     </div> 
@@ -33,7 +33,7 @@
 
 
 
-
+<body>
  
     
     <div class="article d-flex justify-content-center">
