--- a/templates/story/index.html.twig
+++ b/templates/story/index.html.twig
@@ -3,8 +3,7 @@
 {% block title %}Story index{% endblock %}
 
 {% block body %}
-
-<div class="navbarStory">
+ <div class="navbarGallery">
 <nav class="navbar">
     <a href="/home" class="lien logo"> A & J's WEDDING </a>
 
@@ -18,12 +17,11 @@
         <li><a class="lien" href="/info">RSVP & INFOS </a></li>
       </ul>
     </div> 
-
+</div>
     <i class="fa-solid fa-bars" alt="menu burger" id="menu-hamburger" style="color:white"></i>
 
 
     </nav>
- 
  
 <header class="headerStory"> 
 
