--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -37,7 +37,6 @@ header {
   .open {
     display: flex !important;
   }
-
   .menu-container {
     position: absolute;
     z-index: 3;
@@ -48,6 +47,7 @@ header {
     display: block !important;
     z-index: 3;
   }
+  
 }
 
 .open {
@@ -56,16 +56,26 @@ header {
 
 .menu-burger {
   padding-top: 120px;
-  background-color: black;
+  background-color:#DCD2CC;
   height: 100vh;
   width: 180px;
   display: flex;
-  justify-content: flex-end;
-  padding-right: 20px;
+  justify-content: center;
+ 
+  
 }
 
 .navbar a { 
-    color: white;
+    color: white !important;
+}
+
+a { 
+  color: white !important;
+} 
+
+a:hover{ 
+color: white ;
+
 }
 
 .navbar .logo { 
@@ -686,6 +696,9 @@ section p{
   left: 25%;
 
 }
+
+
+
 
 
 
