--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,8 @@
 
 {% block body %}
 
- <nav class="navbar">
+  <div class="navbarGallery">
+<nav class="navbar">
     <a href="/home" class="lien logo"> A & J's WEDDING </a>
 
     <div class="nav-links">
@@ -17,12 +18,11 @@
         <li><a class="lien" href="/info">RSVP & INFOS </a></li>
       </ul>
     </div> 
-
+</div>
     <i class="fa-solid fa-bars" alt="menu burger" id="menu-hamburger" style="color:white"></i>
 
 
     </nav>
- 
  
 <header></header>
    
