--- a/templates/info/info_envoye.html.twig
+++ b/templates/info/info_envoye.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
    {% block body %}
-
-     <div class="navbarGallery " style="background-color:;">
+ <div class="navbarGallery">
 <nav class="navbar">
     <a href="/home" class="lien logo"> A & J's WEDDING </a>
 
@@ -15,7 +14,7 @@
         <li><a class="lien" href="/info">RSVP & INFOS </a></li>
       </ul>
     </div> 
-
+</div>
     <i class="fa-solid fa-bars" alt="menu burger" id="menu-hamburger" style="color:white"></i>
 
 
