--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Menu index{% endblock %}
 
 {% block body %}
-  <div class="navbarStory">
+  <div class="navbarGallery">
 <nav class="navbar">
     <a href="/home" class="lien logo"> A & J's WEDDING </a>
 
@@ -17,8 +17,8 @@
         <li><a class="lien" href="/info">RSVP & INFOS </a></li>
       </ul>
     </div> 
-
-    <i class="fa-solid fa-bars" alt="menu burger" id="menu-hamburger"></i>
+</div>
+    <i class="fa-solid fa-bars" alt="menu burger" id="menu-hamburger" style="color:white"></i>
 
 
     </nav>
