--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -34,132 +34,133 @@
 
 <div class="divMenu">
 
-
   <div class="CarteTotale">
+
+
     <div class="App">
 
-     <div class="card1" style="width: 18rem;">
-     <img src="" class="card-img-top" alt="...">
-     <div class="card-body">
-     <h5 class="card-title">Appetizers</h5>
-     <p class="card-text">Tomato and basil bruschetta</p>
-     </div> <!--class="card"-->
-     <ul class="list-group list-group-flush">
-     <li class="list-group-item">Grilled country bread</li>
-     <li class="list-group-item">Chopped cherry tomatoes</li>
-     <li class="list-group-item">Fresh chopped basil</li>
-     </ul>
-     </div>
+          <div class="card1" style="width: 18rem;">
+            <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/331291420_751658662820079_5885862970788325998_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=aee45a&_nc_ohc=dLAc3eWfxLQAX-3WzoP&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdRBA-5nTbKNVR1LUka0UC16SzIRizDX3r6qCanCfFGYeA&oe=6415D0EE" id="imgAPP"class="card-img-top" alt="...">
+          <div class="card-body">
+          <h5 class="card-title">Appetizers</h5>
+          <p class="card-text">Tomato bruschetta</p>
+          </div> <!--class="card"-->
+          <ul class="list-group list-group-flush">
+          <li class="list-group-item">Grilled country bread</li>
+          <li class="list-group-item">Chopped cherry tomatoes</li>
+          <li class="list-group-item">Fresh chopped basil</li>
+          </ul>
+          </div>
 
 
 
-     <div class="card1" style="width: 18rem;">
-     <img src="" class="card-img-top" alt="...">
-     <div class="card-body">
-     <h5 class="card-title">Appetizers</h5>
-     <p class="card-text">Mini vegetable quiches</p>
-     </div> <!--class="card"-->
-     <ul class="list-group list-group-flush">
-     <li class="list-group-item">Shortcrust pastry</li>
-     <li class="list-group-item">Diced red onions</li>
-     <li class="list-group-item">Diced green peppers</li>
-     </ul>
-     </div>
+          <div class="card1" style="width: 18rem;">
+            <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/331536761_761510071999174_761995991821009018_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=aee45a&_nc_ohc=XcWxXCBO4rUAX92-HZ1&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdR73VhwJ0OYNJ21jLeQzdqAxqqBchDdHbhxv3m9rsxBHA&oe=6415A1E2" id="imgAPP" class="card-img-top" alt="...">
+          <div class="card-body">
+          <h5 class="card-title">Appetizers</h5>
+          <p class="card-text">Mini vegetable quiches</p>
+          </div> <!--class="card"-->
+          <ul class="list-group list-group-flush">
+          <li class="list-group-item">Shortcrust pastry</li>
+          <li class="list-group-item">Diced red onions</li>
+          <li class="list-group-item">Diced green peppers</li>
+          </ul>
+          </div>
 
 
-     <div class="card1" style="width: 18rem;">
-     <img src="" class="card-img-top" alt="...">
-     <div class="card-body">
-     <h5 class="card-title">Appetizers</h5>
-     <p class="card-text">Vietnamese spring rolls</p>
-     </div> <!--class="card"-->
-     <ul class="list-group list-group-flush">
-     <li class="list-group-item">Rice paper wraps</li>
-     <li class="list-group-item">Chopped romaine lettuce</li>
-     <li class="list-group-item">Sliced cucumber</li>
-     </ul>
-     </div>
+          <div class="card1" style="width: 18rem;">
+            <img src="https://scontent.xx.fbcdn.net/v/t1.15752-9/331697866_1188154988568743_3452646319198632246_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=aee45a&_nc_ohc=m0cM5iKXclYAX8meSN5&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdT1pIJ54iqi-xyaUWbiZUw8xOmHKdwOxChrVMQ0mTwAlQ&oe=6415AD54" id="imgAPP" class="card-img-top" alt="...">
+          <div class="card-body">
+          <h5 class="card-title">Appetizers</h5>
+          <p class="card-text">Vietnamese spring rolls</p>
+          </div> <!--class="card"-->
+          <ul class="list-group list-group-flush">
+          <li class="list-group-item">Rice paper wraps</li>
+          <li class="list-group-item">Chopped romaine lettuce</li>
+          <li class="list-group-item">Sliced cucumber</li>
+          </ul>
+          </div>
 
+          
+
+            </div> <!--class="App"-->
+
+            <div class="MainC">
+
+
+          <div class="card1" style="width: 18rem;">
+        
+          <div class="card-body">
+          <h5 class="card-title">Main Courses</h5>
+          <p class="card-text">Grilled salmon with herb butter</p>
+          </div> <!--class="card"-->
+          <ul class="list-group list-group-flush">
+          <li class="list-group-item">Fresh salmon fillets</li>
+          <li class="list-group-item">Lemon & Olive oil</li>
+          <li class="list-group-item">Mixed herbs</li>
+          </ul>
+          </div>
+
+
+          <div class="card1" style="width: 18rem;">
+         
+          <div class="card-body">
+          <h5 class="card-title">Main Courses</h5>
+          <p class="card-text">Beef tenderloin with red wine </p>
+          </div> <!--class="card"-->
+          <ul class="list-group list-group-flush">
+          <li class="list-group-item">Beef tenderloin</li>
+          <li class="list-group-item">Red wine & Beef broth</li>
+          <li class="list-group-item">Mixed herbs</li>
+          </ul>
+          </div>
+
+            </div> <!-- div MainC-->
+
+            <div class="Dessert">
+
+          <div class="card1" style="width: 18rem;">
+       
+          <div class="card-body">
+          <h5 class="card-title">Desserts</h5>
+          <p class="card-text">Strawberry shortcake</p>
+          </div> <!--class="card"-->
+          <ul class="list-group list-group-flush">
+          <li class="list-group-item">Biscuits</li>
+          <li class="list-group-item">Fresh strawberries</li>
+          <li class="list-group-item">Whipped cream</li>
+          </ul>
+          </div>
+
+
+          <div class="card1" style="width: 18rem;">
      
-
-      </div> <!--class="App"-->
-
-      <div class="MainC">
-
-
-     <div class="card1" style="width: 18rem;">
-     <img src="" class="card-img-top" alt="...">
-     <div class="card-body">
-     <h5 class="card-title">Main Courses</h5>
-     <p class="card-text">Grilled salmon with herb butter</p>
-     </div> <!--class="card"-->
-     <ul class="list-group list-group-flush">
-     <li class="list-group-item">Fresh salmon fillets</li>
-     <li class="list-group-item">Lemon & Olive oil</li>
-     <li class="list-group-item">Mixed herbs</li>
-     </ul>
-     </div>
+          <div class="card-body">
+          <h5 class="card-title">Desserts</h5>
+          <p class="card-text">Mini tiramisu cups</p>
+          </div> <!--class="card"-->
+          <ul class="list-group list-group-flush">
+          <li class="list-group-item">Ladyfingers</li>
+          <li class="list-group-item">Mascarpone cheese</li>
+          <li class="list-group-item">Heavy cream</li>
+          </ul>
+          </div>
 
 
-      <div class="card1" style="width: 18rem;">
-     <img src="" class="card-img-top" alt="...">
-     <div class="card-body">
-     <h5 class="card-title">Main Courses</h5>
-     <p class="card-text">Beef tenderloin with red wine </p>
-     </div> <!--class="card"-->
-     <ul class="list-group list-group-flush">
-     <li class="list-group-item">Beef tenderloin</li>
-     <li class="list-group-item">Red wine & Beef broth</li>
-     <li class="list-group-item">Mixed herbs</li>
-     </ul>
-     </div>
+          <div class="card1" style="width: 18rem;">
+         
+          <div class="card-body">
+          <h5 class="card-title">Desserts</h5>
+          <p class="card-text">Assorted macarons</p>
+          </div> <!--class="card"-->
+          <ul class="list-group list-group-flush">
+          <li class="list-group-item">Almond flour</li>
+          <li class="list-group-item">Powdered sugar </li>
+          <li class="list-group-item">Buttercream filling</li>
+          </ul>
+          </div> 
 
-      </div> <!-- div MainC-->
-
-      <div class="Dessert">
-
-       <div class="card1" style="width: 18rem;">
-     <img src="..." class="card-img-top" alt="...">
-     <div class="card-body">
-     <h5 class="card-title">Desserts</h5>
-     <p class="card-text">Strawberry shortcake</p>
-     </div> <!--class="card"-->
-     <ul class="list-group list-group-flush">
-     <li class="list-group-item">Biscuits</li>
-     <li class="list-group-item">Fresh strawberries</li>
-     <li class="list-group-item">Whipped cream</li>
-     </ul>
-     </div>
-
-
-      <div class="card1" style="width: 18rem;">
-     <img src="..." class="card-img-top" alt="...">
-     <div class="card-body">
-     <h5 class="card-title">Desserts</h5>
-     <p class="card-text">Mini tiramisu cups</p>
-     </div> <!--class="card"-->
-     <ul class="list-group list-group-flush">
-     <li class="list-group-item">Ladyfingers</li>
-     <li class="list-group-item">Mascarpone cheese</li>
-     <li class="list-group-item">Heavy cream</li>
-     </ul>
-     </div>
-
-
-      <div class="card1" style="width: 18rem;">
-     <img src="..." class="card-img-top" alt="...">
-     <div class="card-body">
-     <h5 class="card-title">Desserts</h5>
-     <p class="card-text">Assorted macarons</p>
-     </div> <!--class="card"-->
-     <ul class="list-group list-group-flush">
-     <li class="list-group-item">Almond flour</li>
-     <li class="list-group-item">Powdered sugar </li>
-     <li class="list-group-item">Buttercream filling</li>
-     </ul>
-     </div> 
-
-      </div> <!--desserts -->
+            </div> <!--desserts -->
 
 
   </div> <!--CarteTotale-->
