--- a/templates/story/index.html.twig
+++ b/templates/story/index.html.twig
@@ -31,16 +31,16 @@
 
 
 
-<body>
+<body class="story">
  
     
-    <div class="article d-flex justify-content-center">
-        
+    <div class="article">
+
         <div class="txtArt "> 
         <h3 class="h3Story" style='color:#67595E;'> We are together !</h3>
         <p style='color:#67595E;'> Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel eros accumsan, varius velit sed, rhoncus elit. Sed ultricies, neque tincidunt facilisis auctor, tellus diam posuere ex, sit amet tincidunt nisi sapien vitae justo. Pellentesque consequat mattis nisl, sit amet hendrerit magna interdum sed. Nunc at facilisis velit, ut tincidunt ex. Quisque at erat eu ante pulvinar mollis. Vestibulum sed volutpat turpis. Donec congue erat vitae diam malesuada fringilla. Aenean molestie finibus accumsan. Pellentesque lacus magna, rutrum bibendum metus a, vulputate posuere erat. Morbi vel iaculis velit. </p>
         </div>
-        
+      
 
     </div>
 
