--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -260,12 +260,7 @@ section p{
     
    }
 
-   .story { 
-    width:100%;
-	height:100%;
-	background-color: white;
-    
-   }
+ 
 
    #pp { 
     margin-top: 20px;
@@ -274,7 +269,7 @@ section p{
     margin: 0;
     background-color: #FAF7F4;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding:  20px 0px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-shadow: 0px 2px 2px #A49393;
@@ -392,14 +387,13 @@ section p{
     transform: scale(1.1);
    }  
 
-   
-   
+ 
    
    .article { 
     height: 700px;
     width: 50%;
     background-image: url("https://img.freepik.com/premium-photo/watercolor-botanical-green-leaves-frame-illustration-isolated_202769-4332.jpg?w=996");
-    
+  
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -424,7 +418,8 @@ section p{
     position: absolute;
     z-index: 2;
     bottom:12%;
-    left:27%
+    left:27%;
+  
    }
 
    .headerGallery { 
